--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <header id="about" class="section hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Academic Researcher & <span class="accent">Scholar</span></h1>
-                <p class="lead">Specializing in [Your Field, e.g., Computational Linguistics and AI Ethics]. Dedicated to advancing knowledge through rigorous methodology and cross-disciplinary collaboration.</p>
+                <h1>Computational Biologist & <span class="accent">Biotechnologist</span></h1>
+                <p class="lead">Multidisciplinary researcher with expertise in tissue culture, RNA-Seq, and wet lab techniques. Currently focusing on single-cell transcriptomics, genomic and transcriptomic data analysis, and machine learning applications. Passionate about integrating computational and experimental approaches to advance biological research and sustainable solutions.</p>
                 <div class="social-icons">
                     <!-- LinkedIn -->
-                    <a href="https://linkedin.com/in/yourprofile" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com/in/profile-haris" aria-label="LinkedIn">
                         <svg viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                     </a>
                     <!-- GitHub -->
-                    <a href="https://github.com/yourusername" aria-label="GitHub">
+                  <!--  <a href="https://github.com/yourusername" aria-label="GitHub">
                         <svg viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.041-1.416-4.041-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
-                    </a>
+                    </a> -->
                     <!-- Google Scholar -->
-                    <a href="#" aria-label="Google Scholar">
+                    <a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=APjjwua1HhKL2K8mprduVh5s_o07wgDKE9coWsSbcULPxx70zYnO9kAymAbllLl5Y5LyyFitVv3KDlV_2Sx-yg&user=nPzH0agAAAAJ" aria-label="Google Scholar">
                         <svg viewBox="0 0 24 24"><path d="M12 24l-8-9h6v-10h4v10h6l-8 9zm8-24h-16v2h16v-2z"/></svg>
                     </a>
                 </div>
@@ -55,16 +55,17 @@
             <h2 class="section-title">Education</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <span class="date">2018 — 2022</span>
-                    <h3>Ph.D. in Computer Science</h3>
-                    <p class="institution">University of Excellence, United Kingdom</p>
-                    <p>Thesis: "Evaluating Neural Architectures in Low-Resource Environments." Advised by Prof. Jane Smith.</p>
+                    <span class="date">2025 — Current</span>
+                    <h3>Master's in Bioinformatics</h3>
+                    <p class="institution">Government College University Faisalabad, Pakistan</p>
+                    <p>Research Focus: "Exploring Machine Learning Approaches, Single-Cell Transcriptomics and Advanced Bioinformatics Analyses for Complex Diseases." Advised by <a href="https://scholar.google.com/citations?hl=en&user=OcgB99cAAAAJ" target="_blank">Dr. Farrukh Azeem</a>.
+</p>
                 </div>
                 <div class="timeline-item">
-                    <span class="date">2016 — 2018</span>
-                    <h3>M.Sc. in Data Science</h3>
-                    <p class="institution">Global Institute of Technology, Germany</p>
-                    <p>Graduated with Distinction. Focused on Machine Learning and Statistical Modeling.</p>
+                    <span class="date">2021 — 2025</span>
+                    <h3>Bachelor's in Biotechnology</h3>
+                    <p class="institution">">Government College University Faisalabad, Pakistan</p>
+                    <p>Thesis: Identification Of Novel Therapeutic Targets For Hypertrophic Cardiomyopathy (HCM) Using RNA-Seq Data Analysis</p>
                 </div>
             </div>
         </div>
@@ -76,21 +77,31 @@
             <h2 class="section-title">Research Experience</h2>
             <div class="card-grid">
                 <div class="card">
-                    <h3>Senior Research Fellow</h3>
-                    <p class="meta">Advanced AI Lab | 2022 — Present</p>
+                    <h3>Reseach Assistant</h3>
+                    <p class="meta">Functional Genomics & Tissue Culture Lab, GCUF | 2024 — Present</p>
                     <ul>
-                        <li>Leading a team of 4 researchers on ethical AI frameworks.</li>
-                        <li>Published 3 papers in top-tier conferences (NeurIPS, ICML).</li>
-                        <li>Collaborating with international partners across EU institutions.</li>
+                        <li>Conducting single-cell RNA sequencing to study gene expression in diseased cells.</li>                                   <li>Worked on developing genetically identical maize cell lines via micropropagation for food safety                         research.</li>
+                        <li>Developed Pakistan’s first Hypertrophic Cardiomyopathy (HCM) drug database.</li>
+                        <li>Trained 3 undergraduates in tissue culture and molecular biology techniques.</li>
+                        <li>Contributed to 6 manuscripts on NGS analysis, tissue culture, database development, and plant 
+                        biotechnology.</li>
                     </ul>
                 </div>
                 <div class="card">
-                    <h3>Graduate Researcher</h3>
-                    <p class="meta">Tech University | 2018 — 2022</p>
+                    <h3>Summer Research Fellow</h3>
+                    <p class="meta">International Center for Chemical and Biological Sciences (ICCBS), Karachi | 2025</p>
                     <ul>
-                        <li>Developed novel algorithms for data processing.</li>
-                        <li>Assisted in grant writing for a $2M research project.</li>
-                        <li>Presented findings at 5 international symposiums.</li>
+                        <li>Performed DNA library preparation and whole-exome sequencing (WES) for Acute Myeloid Leukemia                             samples.</li>
+                        <li>Identified 884 novel high-impact variants using a custom Linux- and R-based bioinformatics                               pipeline.</li>
+                    </ul>
+                </div>
+                 <div class="card">
+                    <h3>Research Internship</h3>
+                    <p class="meta">Ayub Agricultural Research Institute (AARI), Faisalabad | 2024</p>
+                    <ul>
+                        <li>Gained hands-on experience in molecular biology techniques: DNA extraction, PCR/qPCR, PAGE, and                         microscopy.</li>
+                        <li>Trained in plant tissue culture and microbial isolation methods.</li>
+                        <li>Performed biochemical enzyme assays and other advanced laboratory techniques.</li>
                     </ul>
                 </div>
             </div>
@@ -196,4 +207,5 @@
     </footer>
 
 </body>
+
 </html>
