--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-content">
-            <div class="logo">Researcher<span>Profile</span></div>
+            <div class="logo">Muhammad<span>Haris</span></div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#education">Education</a></li>
@@ -58,14 +58,14 @@
                     <span class="date">2025 — Current</span>
                     <h3>Master's in Bioinformatics</h3>
                     <p class="institution">Government College University Faisalabad, Pakistan</p>
-                    <p>Research Focus: "Exploring Machine Learning Approaches, Single-Cell Transcriptomics and Advanced Bioinformatics Analyses for Complex Diseases." Advised by <a href="https://scholar.google.com/citations?hl=en&user=OcgB99cAAAAJ" target="_blank">Dr. Farrukh Azeem</a>.
+                    <p><b>Research Focus:</b> "Exploring Machine Learning Approaches, Single-Cell Transcriptomics and Advanced Bioinformatics Analyses for Complex Diseases." Advised by <a href="https://scholar.google.com/citations?hl=en&user=OcgB99cAAAAJ" target="_blank">Dr. Farrukh Azeem</a>.
 </p>
                 </div>
                 <div class="timeline-item">
                     <span class="date">2021 — 2025</span>
                     <h3>Bachelor's in Biotechnology</h3>
-                    <p class="institution">">Government College University Faisalabad, Pakistan</p>
-                    <p>Thesis: Identification Of Novel Therapeutic Targets For Hypertrophic Cardiomyopathy (HCM) Using RNA-Seq Data Analysis</p>
+                    <p class="institution">"Government College University Faisalabad, Pakistan</p>
+                    <p><b>Thesis:</b> "Identification Of Novel Therapeutic Targets For Hypertrophic Cardiomyopathy (HCM) Using RNA-Seq Data Analysis". Advised by <a href="https://scholar.google.com/citations?hl=en&user=OcgB99cAAAAJ" target="_blank">Dr. Farrukh Azeem</a> & <a href="https://scholar.google.com/citations?user=mcuCxEMAAAAJ&hl=en" target="_blank">Dr. Tayyaba Shaheen</a>.</p>
                 </div>
             </div>
         </div>
@@ -115,17 +115,26 @@
             <div class="project-list">
                 <div class="project-item">
                     <div class="project-header">
-                        <h3>Project OpenSource Academic</h3>
-                        <span class="tag">Python</span>
+                        <h3>HCMdrugs</h3>
+                        <span class="tag">Database</span>
                     </div>
-                    <p>An open-source library for automating citation analysis in academic papers. Currently used by over 500 researchers globally.</p>
+                    <p>A web-based database cataloging the drugs available for the treatment of Hypertrophic Cardiomyopathy                      (HCM). Currently in use by over 500 clinicians and researchers.</p>
                 </div>
                 <div class="project-item">
                     <div class="project-header">
-                        <h3>Dataset: EthicFlow</h3>
-                        <span class="tag">SQL / R</span>
+                        <h3>Integrative Transcriptomics & Network Medicine in Hypertrophic Cardiomyopathy (HCM)</h3>
+                        <span class="tag">RNA-Seq / Network Biology / Computational Drug Repurposing</span>
                     </div>
-                    <p>A curated dataset of 1M+ entries for studying bias in algorithmic decision-making systems.</p>
+                    <p>Analyzed human myocardial RNA-seq data to identify dysregulated genes and pathways in HCM, proposing                      zinc-based compounds and selective immune modulators as potential therapeutics.</p>
+                </div>
+                <div class="project-item">
+                    <div class="project-header">
+                        <h3>Iron Nanoparticles Mitigate Textile Wastewater Toxicity in Wheat</h3>
+                        <span class="tag">Phytotoxicity Assays / RNA-Seq</span>
+                    </div>
+                    <p>Developed chemically and biologically synthesized iron nanoparticles to detoxify textile wastewater.
+                        Biological FeNP treatment improved wheat growth and restored key stress-responsive transcriptomic
+                        pathways, demonstrating a sustainable approach for wastewater remediation in agriculture.</p>
                 </div>
             </div>
         </div>
@@ -209,3 +218,4 @@
 </body>
 
 </html>
+
