--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="timeline-item">
                     <span class="date">2021 — 2025</span>
                     <h3>Bachelor's in Biotechnology</h3>
-                    <p class="institution">"Government College University Faisalabad, Pakistan</p>
+                    <p class="institution">Government College University Faisalabad, Pakistan</p>
                     <p><b>Thesis:</b> "Identification Of Novel Therapeutic Targets For Hypertrophic Cardiomyopathy (HCM) Using RNA-Seq Data Analysis". Advised by <a href="https://scholar.google.com/citations?hl=en&user=OcgB99cAAAAJ" target="_blank">Dr. Farrukh Azeem</a> & <a href="https://scholar.google.com/citations?user=mcuCxEMAAAAJ&hl=en" target="_blank">Dr. Tayyaba Shaheen</a>.</p>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 <div class="project-item">
                     <div class="project-header">
                         <h3>Integrative Transcriptomics & Network Medicine in Hypertrophic Cardiomyopathy (HCM)</h3>
-                        <span class="tag">RNA-Seq / Network Biology / Computational Drug Repurposing</span>
+                        <span class="tag">RNA-Seq / Computational Drug Repurposing</span>
                     </div>
                     <p>Analyzed human myocardial RNA-seq data to identify dysregulated genes and pathways in HCM, proposing                      zinc-based compounds and selective immune modulators as potential therapeutics.</p>
                 </div>
@@ -146,16 +146,16 @@
             <h2 class="section-title">Technical Skills</h2>
             <div class="skills-container">
                 <div class="skill-category">
-                    <h4>Research</h4>
-                    <p>Quantitative Analysis, Qualitative Interviewing, Academic Writing, Grant Proposals, Peer Review.</p>
+                    <h4>Biotechnology</h4>
+                    <p>Tissue Culture, DNA Extraction, PCR/qPCR, Gel Electrophoresis, Plant Physiological Analysis, Biochemical Assays.</p>
                 </div>
                 <div class="skill-category">
-                    <h4>Tools & Tech</h4>
-                    <p>Python (PyTorch, NumPy), R, LaTeX, SQL, Git, Docker, MATLAB.</p>
+                    <h4>Bioinformatics</h4>
+                    <p>Single-cell & Bulk RNA-seq Analysis, WES & NGS data Analysis, Phylogenetic Analysis, In-silico Primer & vector design, Database & Web Development.</p>
                 </div>
                 <div class="skill-category">
-                    <h4>Languages</h4>
-                    <p>English (Native), German (Fluent), French (Professional Working).</p>
+                    <h4>Tech</h4>
+                    <p>Python, Linux, R, SQL, HTML/CSS, JavaScript, PHP</p>
                 </div>
             </div>
         </div>
@@ -165,7 +165,8 @@
     <section id="cv" class="section bg-alt cv-section">
         <div class="container text-center">
             <h2 class="section-title">Curriculum Vitae</h2>
-            <p>For a detailed overview of my academic background, publications, and teaching experience, please download my full CV.</p>
+            <p>For a detailed overview of my academic background, download my CV.</p>
+            <br>
             <a href="cv.pdf" class="btn btn-primary" download>
                 Download PDF CV
             </a>
@@ -178,23 +179,24 @@
             <h2 class="section-title">Get In Touch</h2>
             <div class="contact-wrapper">
                 <div class="contact-info">
-                    <p>I am open to research collaborations, guest lectures, and consulting opportunities.</p>
+                    <p>I am open to research collaborations!</p>
+                    <br>
                     <div class="info-item">
                         <strong>Email:</strong> 
-                        <a href="mailto:your.email@university.edu">your.email@university.edu</a>
+                        <a href="mailto:mharis.202101862@gcuf.edu.pk">mharis.202101862@gcuf.edu.pk</a>
                     </div>
                     <div class="info-item">
                         <strong>Phone:</strong> 
                         <span>+92 (313) 166-7238</span>
                     </div>
                     <div class="info-item">
-                        <strong>Office:</strong> 
-                        <span>Building 4, Room 202, University Campus</span>
+                        <strong>Address</strong> 
+                        <span>Functional Genomics and Tissue Culture Lab, 1st Floor, Zakir Hussain Block, GCUF, Faisalabad, Pakistan.</span>
                     </div>
                 </div>
 
                 <!-- FormSubmit handles the email without needing JS or a backend -->
-                <form action="https://formsubmit.co/your.email@university.edu" method="POST" class="contact-form">
+                <form action="https://formsubmit.co/mharis.202101862@gcuf.edu.pk" method="POST" class="contact-form">
                     <input type="text" name="name" placeholder="Full Name" required>
                     <input type="email" name="email" placeholder="Email Address" required>
                     <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
@@ -210,7 +212,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+            <p>&copy; 2026 Muhammad Haris. All rights reserved.</p>
             <p class="footer-sub">Designed for Academic Excellence.</p>
         </div>
     </footer>
@@ -218,4 +220,5 @@
 </body>
 
 </html>
+
 
