--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" cl
             <h2 class="section-title">Curriculum Vitae</h2>
             <p>For a detailed overview of my academic background, download my CV.</p>
             <br>
-            <a href="cv.pdf" class="btn btn-primary" download>
+            <a href="cv.pdf.pdf" class="btn btn-primary" download>
                 Download PDF CV
             </a>
         </div>
@@ -225,6 +225,7 @@ Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" cl
 </body>
 
 </html>
+
 
 
 
