--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" cl
                     <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
                     <button type="submit" class="btn">Send Message</button>
                     <!-- Success Landing Page (Optional) -->
-                    <input type="hidden" name="_next" value="https://github.com/mharis01862/mharis.github.io/thanks.html">
+                    <input type="hidden" name="_next">
                     <input type="hidden" name="_subject" value="Haris, You got a new inquiry on your portfolio!">
                 </form>
             </div>
@@ -225,6 +225,7 @@ Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" cl
 </body>
 
 </html>
+
 
 
 
