--- a/index.html
+++ b/index.html
@@ -166,6 +166,102 @@ Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" cl
         </div>
     </section>
 
+    <!-- Publications Section -->
+<section id="publications" class="section">
+    <div class="container">
+        <h2 class="section-title">Publications</h2>
+        <div class="pub-list">
+            <div class="pub-item">
+                <span class="pub-year">2023</span>
+                <div class="pub-content">
+                    <h3>Optimizing CRISPR-Cas9 Delivery for Bioprocessing in Mammalian Cells</h3>
+                    <p class="pub-meta">Journal of Biotechnology & Bioengineering | Vol. 14, Issue 2</p>
+                    <a href="#" class="pub-link">View Paper ↗</a>
+                </div>
+            </div>
+            <div class="pub-item">
+                <span class="pub-year">2022</span>
+                <div class="pub-content">
+                    <h3>Synthetic Biology Approaches to Sustainable Biofuel Production</h3>
+                    <p class="pub-meta">International Conference on Genomics and Proteomics (ICGP)</p>
+                    <a href="#" class="pub-link">Read Abstract ↗</a>
+                </div>
+            </div>
+            <div class="pub-item">
+                <span class="pub-year">2021</span>
+                <div class="pub-content">
+                    <h3>Microbial Fuel Cells: A Review of Anode Modification Strategies</h3>
+                    <p class="pub-meta">Nature Communications (Pre-print)</p>
+                    <a href="#" class="pub-link">Download PDF ↗</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Awards & Honors Section -->
+<section id="awards" class="section bg-alt">
+    <div class="container">
+        <h2 class="section-title">Awards & Honors</h2>
+        <div class="awards-grid">
+            <div class="award-card">
+                <span class="award-date">2023</span>
+                <h3>Global Biotech Innovation Award</h3>
+                <p>Recognized for outstanding contribution to sustainable bioprocessing research.</p>
+            </div>
+            <div class="award-card">
+                <span class="award-date">2021</span>
+                <h3>University Research Fellowship</h3>
+                <p>Awarded for academic excellence and potential in genomic sciences.</p>
+            </div>
+            <div class="award-card">
+                <span class="award-date">2019</span>
+                <h3>Dean's List for Academic Excellence</h3>
+                <p>Maintained a 4.0 GPA across all core biotechnology modules.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Organizational Activities Gallery -->
+<section id="activities" class="section">
+    <div class="container">
+        <h2 class="section-title">Organizational Activities</h2>
+        <div class="gallery-grid">
+            <!-- Item 1 -->
+            <div class="gallery-item">
+                <img src="https://images.unsplash.com/photo-1532187875460-120548011355?auto=format&fit=crop&w=600&q=80" alt="Lab Volunteer Work">
+                <div class="gallery-overlay">
+                    <div class="overlay-text">
+                        <h4>STEM Outreach</h4>
+                        <p>Volunteered as a lab mentor for local high school students.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Item 2 -->
+            <div class="gallery-item">
+                <img src="https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?auto=format&fit=crop&w=600&q=80" alt="Environmental Activity">
+                <div class="gallery-overlay">
+                    <div class="overlay-text">
+                        <h4>Coastal Clean-up</h4>
+                        <p>Led the university's environmental club in a plastic-free initiative.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Item 3 -->
+            <div class="gallery-item">
+                <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644?auto=format&fit=crop&w=600&q=80" alt="Club Event">
+                <div class="gallery-overlay">
+                    <div class="overlay-text">
+                        <h4>Biotech Symposium</h4>
+                        <p>Chief Organizer for the 2022 Regional Scholar Meet.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
     <!-- CV Section -->
     <section id="cv" class="section bg-alt cv-section">
         <div class="container text-center">
@@ -225,6 +321,7 @@ Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" cl
 </body>
 
 </html>
+
 
 
 
