--- a/index.html
+++ b/index.html
@@ -328,10 +328,12 @@ Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" cl
             <p class="footer-sub">Designed for Academic Excellence.</p>
         </div>
     </footer>
+<script src="script.js"></script>
 
 </body>
 
 </html>
+
 
 
 
