--- a/index.html
+++ b/index.html
@@ -172,30 +172,37 @@ Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" cl
         <h2 class="section-title">Publications</h2>
         <div class="pub-list">
             <div class="pub-item">
-                <span class="pub-year">2023</span>
+                <span class="pub-year">2026</span>
                 <div class="pub-content">
-                    <h3>Optimizing CRISPR-Cas9 Delivery for Bioprocessing in Mammalian Cells</h3>
-                    <p class="pub-meta">Journal of Biotechnology & Bioengineering | Vol. 14, Issue 2</p>
-                    <a href="#" class="pub-link">View Paper ↗</a>
+                    <h3>HCMdrugs: A Web-based Database Cataloging the Drugs Available for the Treatment of Hypertrophic
+Cardiomyopathy (HCM)</h3>
+                    <p class="pub-meta">Journal of Computational Biophysics and Chemistry</p>
+                    <a href="https://doi.org/10.1142/S2737416525500954" class="pub-link">View Paper ↗</a>
                 </div>
             </div>
             <div class="pub-item">
-                <span class="pub-year">2022</span>
+                <span class="pub-year">2026</span>
                 <div class="pub-content">
-                    <h3>Synthetic Biology Approaches to Sustainable Biofuel Production</h3>
-                    <p class="pub-meta">International Conference on Genomics and Proteomics (ICGP)</p>
-                    <a href="#" class="pub-link">Read Abstract ↗</a>
+                    <h3>Integrative Transcriptomics and Network Medicine Identified Non-sarcomeric Dysregulated Ion Homeostasis and Innate Immunity genes as Therapeutic Targets in Hypertrophic Cardiomyopathy (HCM)</h3>
+                    <p class="pub-meta">Under Review</p>
                 </div>
             </div>
             <div class="pub-item">
-                <span class="pub-year">2021</span>
+                <span class="pub-year">2026</span>
                 <div class="pub-content">
-                    <h3>Microbial Fuel Cells: A Review of Anode Modification Strategies</h3>
-                    <p class="pub-meta">Nature Communications (Pre-print)</p>
-                    <a href="#" class="pub-link">Download PDF ↗</a>
+                    <h3>Perspectives of Plant-Microbes and Nanotechnology against abiotic stress tolerance under climate
+change conditions</h3>
+                    <p class="pub-meta">Under Review</p>
                 </div>
             </div>
         </div>
+        <span class="pub-year">2025</span>
+                <div class="pub-content">
+                    <h3>Tissue Culture Optimization: Maize Callus Induction and Factors Affecting the Callus Efficiency</h3>
+                    <p class="pub-meta">Integrative Plant Biotechnology</p>
+                    <a href="https://rootspress.org/journals/index.php/pbiotech/article/view/1288" class="pub-link">View Paper ↗</a>
+                </div>
+            </div>
     </div>
 </section>
 
@@ -205,19 +212,24 @@ Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" cl
         <h2 class="section-title">Awards & Honors</h2>
         <div class="awards-grid">
             <div class="award-card">
-                <span class="award-date">2023</span>
-                <h3>Global Biotech Innovation Award</h3>
-                <p>Recognized for outstanding contribution to sustainable bioprocessing research.</p>
+                <span class="award-date">2024</span>
+                <h3>Prime Minister's Letter of Appreciation (PM House, Pakistan)</h3>
+                <p>Recognized for outstanding contribution to environmental sustainability and outreach.</p>
             </div>
             <div class="award-card">
-                <span class="award-date">2021</span>
-                <h3>University Research Fellowship</h3>
-                <p>Awarded for academic excellence and potential in genomic sciences.</p>
+                <span class="award-date">2024</span>
+                <h3>International Youth Conference 9 (IYC9, USA)</h3>
+                <p>Recognized for leadership and impact in advancing sustainable practices and awareness.</p>
             </div>
             <div class="award-card">
-                <span class="award-date">2019</span>
-                <h3>Dean's List for Academic Excellence</h3>
-                <p>Maintained a 4.0 GPA across all core biotechnology modules.</p>
+                <span class="award-date">2024</span>
+                <h3>Local Conference of Youth - 2024 (Islamabad)</h3>
+                <p>Recognized for impactful leadership and representing the Green Youth Movement (GYM) Club</p>
+            </div>
+            <div class="award-card">
+                <span class="award-date">2023-25</span>
+                <h3>Societal Recognition</h3>
+                <p>Appreciated for leading and coordinating 25+ events as President of the Green Youth Movement (GYM) Club, GCUF</p>
             </div>
         </div>
     </div>
@@ -333,6 +345,7 @@ Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" cl
 </body>
 
 </html>
+
 
 
 
