--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@ change conditions</h3>
                     <p class="pub-meta">Under Review</p>
                 </div>
             </div>
+            <div class="pub-item">
             <span class="pub-year">2025</span>
                 <div class="pub-content">
                     <h3>Tissue Culture Optimization: Maize Callus Induction and Factors Affecting the Callus Efficiency</h3>
@@ -246,7 +247,7 @@ change conditions</h3>
                 
                 <!-- Slide 1 -->
                 <div class="carousel-slide">
-                    <img src="https://images.unsplash.com/photo-1581093588401-fbb62a02f120?auto=format&fit=crop&w=1200&q=80" alt="Biotech Conference">
+                    <img src="image.jpeg" alt="Biotech Conference">
                     <div class="carousel-caption">
                         <h3>International Biotech Summit</h3>
                         <p>Presented research on synthetic protein design to global industry leaders.</p>
@@ -345,6 +346,7 @@ change conditions</h3>
 </body>
 
 </html>
+
 
 
 
