--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Academic Portfolio - Researcher and Scholar">
     <title>Muhammad Haris</title>
+    <link rel="icon" sizes="32x32" href="favicon.png" type="image/png">
+    <link rel="icon" sizes="16x16" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -346,6 +348,7 @@ change conditions</h3>
 </body>
 
 </html>
+
 
 
 
