--- a/index.html
+++ b/index.html
@@ -249,28 +249,76 @@ change conditions</h3>
                 
                 <!-- Slide 1 -->
                 <div class="carousel-slide">
-                    <img src="image.jpeg" alt="Biotech Conference">
+                    <img src="image10.jpeg" alt="Biotech Conference">
                     <div class="carousel-caption">
-                        <h3>International Biotech Summit</h3>
-                        <p>Presented research on synthetic protein design to global industry leaders.</p>
+                        <h3>BSP Biotechnology Congress - 2025</h3>
+                        <p>Presented my research on nanoparticle-based wastewater treatment and its application in enhanced wheat growth.</p>
                     </div>
                 </div>
 
                 <!-- Slide 2 -->
                 <div class="carousel-slide">
-                    <img src="https://images.unsplash.com/photo-1532187875460-120548011355?auto=format&fit=crop&w=1200&q=80" alt="Lab Mentorship">
+                    <img src="image11.jpeg" alt="Lab Mentorship">
                     <div class="carousel-caption">
-                        <h3>Community Science Outreach</h3>
-                        <p>Leading a weekend workshop for aspiring biotechnologists.</p>
+                        <h3>Career Fair 2025 - GCUF</h3>
+                        <p>Presented the HCMdrugs database to industrial delegates and investors.</p>
                     </div>
                 </div>
 
                 <!-- Slide 3 -->
                 <div class="carousel-slide">
-                    <img src="https://images.unsplash.com/photo-1497366754035-f200968a6e72?auto=format&fit=crop&w=1200&q=80" alt="Environmental Initiative">
+                    <img src="image19.jpeg" alt="Environmental Initiative">
                     <div class="carousel-caption">
-                        <h3>Sustainability Task Force</h3>
-                        <p>Collaborated on a university-wide zero-waste laboratory initiative.</p>
+                        <h3>Prime Minister's Appreciation Awards</h3>
+                        <p>Received the PM's appreciation award for active leadership in environmental awareness.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-slide">
+                    <img src="image9.jpeg" alt="Environmental Initiative">
+                    <div class="carousel-caption">
+                        <h3>UCP Training Workshop on Bioinformatics and Recombinant DNA Technology</h3>
+                        <p>Participated in the hands-on training workshop and collaborated with the participants.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-slide">
+                    <img src="image23.jpeg" alt="Environmental Initiative">
+                    <div class="carousel-caption">
+                        <h3>GCUF Innovative Expo 2025</h3>
+                        <p>Presented the HCMdrugs database to industrial delegates and investors.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-slide">
+                    <img src="image23.jpeg" alt="Environmental Initiative">
+                    <div class="carousel-caption">
+                        <h3>GCUF Innovative Expo 2025</h3>
+                        <p>Presented the HCMdrugs database to industrial delegates and investors.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-slide">
+                    <img src="image21.jpeg" alt="Environmental Initiative">
+                    <div class="carousel-caption">
+                        <h3>ECO-Tour GYM Club 2025</h3>
+                        <p>Awareness walk and interactions with the locals of AJK on Green Tourism.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-slide">
+                    <img src="image14.jpeg" alt="Environmental Initiative">
+                    <div class="carousel-caption">
+                        <h3>One-Student, One-Tree Plantation Drive</h3>
+                        <p>Plantation Activity.</p>
+                    </div>
+                </div>
+                
+                 <div class="carousel-slide">
+                    <img src="image2.jpeg" alt="Environmental Initiative">
+                    <div class="carousel-caption">
+                        <h3>Awareness Seminar on Biodiversity</h3>
+                        <p>Organized and led the awareness seminar on Biodiversity and Climate Change.</p>
                     </div>
                 </div>
 
@@ -348,6 +396,7 @@ change conditions</h3>
 </body>
 
 </html>
+
 
 
 
