--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
                     <h3>Master's in Bioinformatics</h3>
                     <p class="institution">Government College University Faisalabad, Pakistan</p>
                     <p><b>Research Focus:</b> "Exploring Machine Learning Approaches, Single-Cell Transcriptomics and Advanced Bioinformatics Analyses for Complex Diseases." 
-Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" class="advisor-link">Dr. Farrukh Azeem</a>.
+Advised by <a href="https://www.university.edu/farrukh-azeem" target="_blank" class="advisor-link">Dr. Farrukh Azeem ↗</a>.
 </p>
                 </div>
                 <div class="timeline-item">
                     <span class="date">2021 — 2025</span>
                     <h3>Bachelor's in Biotechnology</h3>
                     <p class="institution">Government College University Faisalabad, Pakistan</p>
-                    <p><b>Thesis:</b> "Identification Of Novel Therapeutic Targets For Hypertrophic Cardiomyopathy (HCM) Using RNA-Seq Data Analysis". Advised by <a href="https://scholar.google.com/citations?hl=en&user=OcgB99cAAAAJ" target="_blank" class="advisor-link">Dr. Farrukh Azeem</a> & <a href="https://scholar.google.com/citations?user=mcuCxEMAAAAJ&hl=en" target="_blank" class="advisor-link">Dr. Tayyaba Shaheen</a>.</p>
+                    <p><b>Thesis:</b> "Identification Of Novel Therapeutic Targets For Hypertrophic Cardiomyopathy (HCM) Using RNA-Seq Data Analysis". Advised by <a href="https://scholar.google.com/citations?hl=en&user=OcgB99cAAAAJ" target="_blank" class="advisor-link">Dr. Farrukh Azeem ↗</a> & <a href="https://scholar.google.com/citations?user=mcuCxEMAAAAJ&hl=en" target="_blank" class="advisor-link">Dr. Tayyaba Shaheen ↗</a>.</p>
                 </div>
             </div>
         </div>
@@ -388,6 +388,7 @@ change conditions</h3>
 </body>
 
 </html>
+
 
 
 
